--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
 
     <!--    Item character and Item comic -->
     <string name="tx_item_name">Nome:</string>
-    <string name="tv_item_description">O sucesso nasce do querer, da determinação e persistência em se chegar a um objetivo.</string>
+    <string name="tv_item_description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. . ".</string>
     <string name="text_description_empty">Esse personagem não possui descrição.</string>
     <string name="comics">Detalhes do Personagem</string>
 
